--- a/public/style.css
+++ b/public/style.css
@@ -1,34 +1,31 @@
-.notification {
-  position: fixed;
-  top: 10px;
-  right: 10px;
-  padding: 10px;
-  background-color: #f0f0f0;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  z-index: 100;
+.background-container {
+  background-color: #f0f2f5;
 }
 
-html {
-  height: 100%;
-  width: 100%;
+.graph-container {
+  height: 300px;
+  background-color: #ffffff;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  margin-bottom: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 450;
 }
-
-svg,
-path {
-  max-width: 100%;
-  height: auto
-}
-
-#volume {
+.volume-indicator {
+  font-size: 5em;
+  font-weight: bold;
+  color: #17a2b8;
+  margin-bottom: 20px;
   font-size: 24px;
-  margin-top: 20px;
 }
 
-.progress {
-  height: 30px;
-}
-
-.chart {
+.footer {
+  text-align: center;
+  padding: 10px;
+  background-color: #ffffff;
+  box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
   margin-top: 20px;
 }
